updates to swift 3 and adds fabric.io

--- a/Project/Podfile
+++ b/Project/Podfile
@@ -9,7 +9,8 @@ target 'scan4pase' do
   pod 'MagicalRecord'
   pod 'Firebase'
   pod 'Firebase/Storage'
-  pod 'Firebase/Crash'
+  pod 'Fabric'
+  pod 'Crashlytics'
   pod 'Firebase/Messaging'
   pod 'StaticDataTableViewController'
   pod 'MTBBarcodeScanner'
