--- a/Project/scan4pase/Info.plist
+++ b/Project/scan4pase/Info.plist
@@ -20,6 +20,20 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>DEVELOPMENT</string>
+	<key>Fabric</key>
+	<dict>
+		<key>APIKey</key>
+		<string>6cf60c3ad663887898f29dc3d69ddcf966c3bbdd</string>
+		<key>Kits</key>
+		<array>
+			<dict>
+				<key>KitInfo</key>
+				<dict/>
+				<key>KitName</key>
+				<string>Crashlytics</string>
+			</dict>
+		</array>
+	</dict>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
